unpackaged/main/default/objects/Spotter_Hotspot__c/Spotter_Hotspot__c.object-meta.xml
<CustomObject>
    <label>Spotter Hotspot</label>
    <nameField>
        <displayFormat>SH-{0}</displayFormat>
        <label>Spotter Hotspots Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spotter Hotspots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>