unpackaged/main/default/objects/Spotter_Hotspot__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Spotter Hotspots</relationshipLabel>
    <relationshipName>Spotter_Hotspots</relationshipName>
    <type>Lookup</type>
</CustomField>