unpackaged/main/default/objects/Spotter_Hotspot__c/fields/Spotter_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Spotter_Configuration__c</fullName>
    <label>Spotter Configuration</label>
    <referenceTo>Spotter_Configuration__c</referenceTo>
    <relationshipLabel>Spotter Hotspots</relationshipLabel>
    <relationshipName>Spotter_Hotspots</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>