unpackaged/main/default/objects/Spotter_Hotspot__c/fields/Style_CSS__c.field-meta.xml
<CustomField>
    <fullName>Style_CSS__c</fullName>
    <label>Style CSS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>